--- a/advanced_custom_motion_sensor.yaml
+++ b/advanced_custom_motion_sensor.yaml
@@ -24,6 +24,7 @@ blueprint:
           multiple: true
     light_target:
       name: Light
+      description: The lights you want to control when motion is detected.
       selector:
         target:
           entity:
@@ -57,17 +58,12 @@ blueprint:
           unit_of_measurement: seconds
           mode: slider
           step: 1.0
-    brightness_level:
-      name: Brightness Level
-      description: Brightness level to set for the lights when motion is detected.
-      default: 255
+    brightness_levels:
+      name: Brightness Levels
+      description: Brightness level to set for each light.
+      default: {}
       selector:
-        number:
-          min: 0
-          max: 255
-          unit_of_measurement: "lx"
-          mode: slider
-          step: 1.0
+        object: {}
     time_default_start:
       name: Only run default action after this time (Optional)
       description: Default Light target will only run when time is later than this time value.
@@ -163,7 +159,7 @@ variables:
   motion_entity: !input motion_entity
   luminance_sensor: !input luminance_sensor
   luminance_required: !input luminance_required
-  brightness_level: !input brightness_level
+  brightness_levels: !input brightness_levels
 trigger:
   - platform: state
     entity_id: !input motion_entity
@@ -212,7 +208,7 @@ action:
           - service: light.turn_on
             target: !input light_target
             data:
-              brightness: !input brightness_level
+              brightness: "{{ brightness_levels[trigger.entity_id] | default(255) }}"
       - conditions:
           - condition: template
             value_template: "{{ trigger.to_state.state == 'off' }}"
