--- a/advanced_custom_motion_sensor.yaml
+++ b/advanced_custom_motion_sensor.yaml
@@ -180,7 +180,7 @@ condition:
       {% if automation_blocker_entitites == null %}
         true
       {% else %}
-        true
+        false
       {% endif %}
   - condition: template
     value_template: >
