Partially corrected automation_blocker_entities check to work when no entity is set

--- a/advanced_custom_motion_sensor.yaml
+++ b/advanced_custom_motion_sensor.yaml
@@ -175,12 +175,18 @@ trigger:
     to: "off"
     for: !input no_motion_wait
 condition:
+condition:
   - condition: template
     value_template: >
-      {% if automation_blocker_entitites == null %}
+      {% if automation_blocker_entities | list | length == 0 %}
         true
       {% else %}
-        false
+        {% for entity in automation_blocker_entities %}
+          {% if states(entity) == 'on' %}
+            false
+          {% endif %}
+        {% endfor %}
+        true
       {% endif %}
   - condition: template
     value_template: >
