--- a/advanced_custom_motion_sensor.yaml
+++ b/advanced_custom_motion_sensor.yaml
@@ -182,7 +182,7 @@ condition:
         true
       {% else %}
         {% for entity in automation_blocker_entities %}
-          {% if states(entity) == (automation_blocker_boolean | string) %}
+          {% if states(entity) == (not automation_blocker_boolean | string) %}
             false
           {% endif %}
         {% endfor %}
