--- a/advanced_custom_motion_sensor.yaml
+++ b/advanced_custom_motion_sensor.yaml
@@ -181,12 +181,13 @@ condition:
       {% if automation_blocker_entities | list | length == 0 %}
         true
       {% else %}
+        {% set matched = false %}
         {% for entity in automation_blocker_entities %}
           {% if states(entity) == (not automation_blocker_boolean | string) %}
-            false
+            {% set matched = true %}
           {% endif %}
         {% endfor %}
-        true
+          {{ not matched }}
       {% endif %}
   - condition: template
     value_template: >
