--- a/advanced_custom_motion_sensor.yaml
+++ b/advanced_custom_motion_sensor.yaml
@@ -12,8 +12,12 @@ blueprint:
     - Only run if an optional entity is in desired state (optional)
     - Default scene when motion stops (optional)
     - Only run the motion off action if an optional entity is in desired state
+    Based on the work from https://github.com/arturoliveira/home-assistant/blob/main/advanced_custom_motion_sensor.yaml
+    Changes included:
+    - Now support we can define multiple automation and motion blocker entities
 
   domain: automation
+  source_url: https://github.com/arturoliveira/home-assistant/blob/main/advanced_custom_motion_sensor.yaml
   input:
     motion_entity:
       name: Motion Sensor
